<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>eu.qualimaster</groupId>
  <artifactId>QualiMaster.Extension</artifactId>
  <version>0.5.0-SNAPSHOT</version>
  <packaging>eclipse-plugin</packaging>
  
  <properties>
    <project.build.sourceEncoding>Cp1252</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <tycho.version>4.0.7</tycho.version>
    <easy.version>1.3.10-SNAPSHOT</easy.version>
  </properties>
  
  <build>
    <sourceDirectory>src</sourceDirectory>
    
    <plugins>
        
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho.version}</version>
        <extensions>true</extensions>
      </plugin>
      
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${tycho.version}</version>
        <configuration>    
          <environments>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86_64</arch>
            </environment>
          </environments>
        </configuration>
      </plugin>
        
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>        

       <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.6.3</version>
        <configuration>
          <show>private</show>
          <encoding>${project.build.sourceEncoding}</encoding>
          <failOnError>false</failOnError>
          <detectJavaApiLink>false</detectJavaApiLink> 
          <detectOfflineLinks>false</detectOfflineLinks>
          <doclint>all,-missing</doclint>
          <additionalOptions>--allow-script-in-comments</additionalOptions> <!-- occurs in some parts, no details where -->
          <legacyMode>true</legacyMode> <!-- some dependencies do not have module infos -->
        </configuration>
        <executions>
          <execution>
            <id>default-cli</id>
            <goals>
              <goal>javadoc</goal>
              <goal>test-javadoc</goal>
              <goal>jar</goal>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
        
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.2.0</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>package</phase>
            <goals>
              <goal>jar-no-fork</goal>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin> 
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>3.1.1</version>
      </plugin>              
        
    </plugins>
    
    <extensions>
      <!-- Enabling the use of SSH -->
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
         <artifactId>wagon-ssh-external</artifactId>
         <version>1.0-beta-6</version>
      </extension>
    </extensions>    
    
  </build>
  
  <distributionManagement>
    <repository>
      <id>sse-projects</id>
      <url>scpexe://projects.sse.uni-hildesheim.de/var/www/qm/maven/</url>
    </repository>
    <snapshotRepository>
      <id>sse-projects</id>
      <url>scpexe://projects.sse.uni-hildesheim.de/var/www/qm/maven/</url>
    </snapshotRepository>
  </distributionManagement>  
  
  <repositories>
    <repository>
      <id>eclipse</id>
      <layout>p2</layout>
      <url>https://download.eclipse.org/releases/2024-03/</url>
    </repository>
    <repository>
      <id>eclipse-upd</id>
      <layout>p2</layout>
      <url>https://download.eclipse.org/eclipse/updates/4.31/</url>
    </repository>
    <repository>
      <id>qm.eu</id>
      <name>qm.eu</name>
      <url>https://projects.sse.uni-hildesheim.de/qm/maven/</url>
      <layout>default</layout>
    </repository>    
  </repositories> 
  
  <dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>eu.qualimaster</groupId>
            <artifactId>FullInfrastructureDependencies</artifactId>
            <version>${project.version}</version>
            <type>pom</type>
            <scope>import</scope>
        </dependency>
        <dependency>
            <groupId>net.ssehub.easy</groupId>
            <artifactId>dependencies</artifactId>
            <version>${easy.version}</version>
            <type>pom</type>
            <scope>import</scope>
        </dependency>   
    </dependencies>
  </dependencyManagement> 

  <dependencies>
      <dependency>
        <groupId>org.apache.storm</groupId>
        <artifactId>storm-core</artifactId>
      </dependency>
       <dependency>
            <groupId>org.osgi</groupId>
            <artifactId>org.osgi.service.component</artifactId>
       </dependency>
       <dependency>
         <groupId>eu.qualimaster</groupId>
         <artifactId>QualiMaster.Events</artifactId>
         <scope>provided</scope>
       </dependency>              
       <dependency>
         <groupId>eu.qualimaster</groupId>
         <artifactId>SpassMeterIntegration</artifactId>
         <scope>provided</scope>
       </dependency>              
       <dependency>
         <groupId>eu.qualimaster</groupId>
         <artifactId>DataManagementLayer</artifactId>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>eu.qualimaster</groupId>
         <artifactId>StormCommons</artifactId>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>eu.qualimaster</groupId>
         <artifactId>CoordinationLayer</artifactId>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>eu.qualimaster</groupId>
         <artifactId>MonitoringLayer</artifactId>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>eu.qualimaster</groupId>
         <artifactId>AdaptationLayer</artifactId>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>net.ssehub.easy</groupId>
         <artifactId>net.ssehub.easy.producer.core</artifactId>
         <version>${easy.version}</version>
       </dependency>
       <dependency>
         <groupId>net.ssehub.easy</groupId>
         <artifactId>net.ssehub.easy.loader</artifactId>
         <version>${easy.version}</version>
       </dependency>
       <dependency>
         <groupId>net.ssehub.easy</groupId>
         <artifactId>net.ssehub.easy.instantiation.maven</artifactId>
         <version>${easy.version}</version>
       </dependency>
       <dependency>
         <groupId>net.ssehub.easy</groupId>
         <artifactId>net.ssehub.easy.instantiation.serializer.xml</artifactId>
         <version>${easy.version}</version>
       </dependency>
  </dependencies>
</project>